src/objects/trailheadapp__Debug_Log__c.object
<CustomObject>
    <fields>
        <fullName>trailheadapp__Class__c</fullName>
        <description>The Apex class that added the debug log.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Datetime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date/time of the log message.</inlineHelpText>
        <label>Datetime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Message__c</fullName>
        <description>The details or message for debug log.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Message</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Method__c</fullName>
        <description>The Apex class method that added the debug log.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Method</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Severity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Severity</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Transaction__c</fullName>
        <description>The unique transaction number for reporting.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Transaction</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Debug Log</label>
    <nameField>
        <displayFormat>TDL-{0000}</displayFormat>
        <label>Debug Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debug Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>